Fixed scrollbars

--- a/app/styles/less/app.less
+++ b/app/styles/less/app.less
@@ -31,6 +31,21 @@
     opacity: 0.3;
 }
 
+::-webkit-scrollbar{
+  width: 8px;
+  height: 8px;
+  background-color: lighten(@gray-light, 13%);
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: 8px;
+  width: 8px;
+  height: 8px;
+  background-color: lighten(@gray-dark, 13%);
+}
+
+
+
 @media (min-width: @screen-md-min) {
     .modal-dialog{
         margin-top: 50px; 
@@ -54,7 +69,7 @@ html, body {
 
 .bodyWrapper {
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
 
